@@ -1,13 +1,11 @@
 package com.github.vzakharchenko.radius.radius.handlers.protocols;
 
-import com.github.vzakharchenko.radius.configuration.RadiusConfigHelper;
 import com.github.vzakharchenko.radius.models.OtpHolder;
 import com.github.vzakharchenko.radius.radius.handlers.otp.IOtpPasswordFactory;
 import com.github.vzakharchenko.radius.radius.handlers.otp.OtpPassword;
 import com.github.vzakharchenko.radius.radius.handlers.otp.OtpPasswordInfo;
 import com.github.vzakharchenko.radius.radius.handlers.session.PasswordData;
 import com.github.vzakharchenko.radius.test.AbstractRadiusTest;
-import com.github.vzakharchenko.radius.test.ModelBuilder;
 import org.keycloak.Config;
 import org.keycloak.credential.CredentialInput;
 import org.keycloak.credential.CredentialModel;
@@ -19,6 +17,7 @@ import org.tinyradius.packet.AccessRequest;
 import java.net.InetSocketAddress;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -39,7 +38,10 @@ public class PAPTest extends AbstractRadiusTest {
         request = new AccessRequest(realDictionary, 0, new byte[16]);
         request.addAttribute(REALM_RADIUS, REALM_RADIUS_NAME);
         HashMap<String, OtpHolder> hashMap = new HashMap<>();
-        hashMap.put("otp", new OtpHolder("otp", new CredentialModel(), Collections.singletonList("123456")));
+        hashMap.put("otp1",
+                new OtpHolder("otp", new CredentialModel(), List.of("123456", "234567")));
+        hashMap.put("otp2",
+                new OtpHolder("otp", new CredentialModel(), List.of("876543","987654")));
         when(subjectCredentialManager.isValid(any(CredentialInput.class))).thenReturn(false);
         otpPasswordInfo = new OtpPassword(false, clientModel);
         otpPasswordInfo.putAll(hashMap);
@@ -53,24 +55,68 @@ public class PAPTest extends AbstractRadiusTest {
         when(passwordFactory.getOTPs(session)).thenReturn(otpPasswordInfo);
     }
 
+
     @Test
-    public void testPapSuccess() {
-        request.setUserPassword("test");
+    public void testPapVerifyPasswordRadius() {
         PAPProtocol papProtocol = new PAPProtocol(request, session);
         assertEquals(papProtocol.getType(), ProtocolType.PAP);
         papProtocol.answer(null, null);
+
+        when(subjectCredentialManager.isValid(any(CredentialInput.class)))
+                .thenThrow(new RuntimeException("should not be called"));
+
+        request.setUserPassword("test");
         assertTrue(papProtocol.verifyPassword(PasswordData.create("test")));
         assertFalse(papProtocol.verifyPassword(null));
         assertFalse(papProtocol.verifyPassword(PasswordData.create("")));
         assertFalse(papProtocol.verifyPassword(PasswordData.create("asdf")));
 
+        request.setUserPassword("test123456");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("123456");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+    }
 
+    @Test
+    public void testPapVerifyPasswordRadiusWithOtp() {
+        enableOTP();
+        PAPProtocol papProtocol = new PAPProtocol(request, session);
+        papProtocol.setOtpPasswordGetter(passwordFactory);
+        assertEquals(papProtocol.getType(), ProtocolType.PAP);
+        papProtocol.answer(null, null);
+
+        when(subjectCredentialManager.isValid(any(CredentialInput.class)))
+                .thenThrow(new RuntimeException("should not be called"));
+
+        request.setUserPassword("test");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("test123456");
+        assertTrue(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("test999999");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("TEST123456");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("123456");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+
+        enableOtpWithoutPassword();
+        request.setUserPassword("test");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("test123456");
+        assertTrue(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("test999999");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("TEST123456");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("123456");
+        assertTrue(papProtocol.verifyPassword(PasswordData.create("test")));
     }
 
     @Test
     public void testPapKerberosFalse() {
         request.setUserPassword("test");
         PAPProtocol papProtocol = new PAPProtocol(request, session);
+        papProtocol.setOtpPasswordGetter(passwordFactory);
         assertFalse(papProtocol.verifyPassword());
     }
 
@@ -79,7 +125,8 @@ public class PAPTest extends AbstractRadiusTest {
         request.setUserPassword("test");
         PAPProtocol papProtocol = new PAPProtocol(request, session);
         when(subjectCredentialManager.isValid(
-                any(CredentialInput.class))).thenReturn(true);
+                any(CredentialInput.class))).thenAnswer(
+                i -> i.getArgument(0, CredentialInput.class).getChallengeResponse().equals("test"));
         assertTrue(papProtocol.verifyPassword());
     }
 
@@ -98,19 +145,33 @@ public class PAPTest extends AbstractRadiusTest {
         request.setUserPassword("123456");
         PAPProtocol papProtocol = new PAPProtocol(request, session);
         papProtocol.setOtpPasswordGetter(passwordFactory);
+
         assertFalse(papProtocol.verifyPassword());
+
+        enableOtpWithoutPassword();
+        assertTrue(papProtocol.verifyPassword());
     }
 
     @Test
     public void testOtpPasswordOTPWithoutPassword() {
         enableOTP();
-        reset(configuration);
-        when(configuration.getRadiusSettings())
-                .thenReturn(ModelBuilder.createRadiusOtpServerSettings());
-        RadiusConfigHelper.setConfiguration(configuration);
-        request.setUserPassword("123456");
         PAPProtocol papProtocol = new PAPProtocol(request, session);
         papProtocol.setOtpPasswordGetter(passwordFactory);
+
+        when(subjectCredentialManager.isValid(any(CredentialInput.class)))
+                .thenThrow(new RuntimeException("should not be called"));
+
+        request.setUserPassword("123456");
+        assertFalse(papProtocol.verifyPassword());
+
+        request.setUserPassword("999999");
+        assertFalse(papProtocol.verifyPassword());
+
+        enableOtpWithoutPassword();
+        request.setUserPassword("123456");
+        assertTrue(papProtocol.verifyPassword());
+
+        request.setUserPassword("999999");
         assertFalse(papProtocol.verifyPassword());
     }
 
@@ -119,23 +180,40 @@ public class PAPTest extends AbstractRadiusTest {
     public void testOtpPasswordWithoutPassword() {
         otpPasswordInfo = new OtpPassword(false, clientModel);
         when(passwordFactory.getOTPs(session)).thenReturn(otpPasswordInfo);
-        reset(configuration);
-        when(configuration.getRadiusSettings())
-                .thenReturn(ModelBuilder.createRadiusOtpServerSettings());
-        RadiusConfigHelper.setConfiguration(configuration);
         request.setUserPassword("123456");
         PAPProtocol papProtocol = new PAPProtocol(request, session);
         papProtocol.setOtpPasswordGetter(passwordFactory);
+
+        assertFalse(papProtocol.verifyPassword());
+
+        enableOtpWithoutPassword();
         assertFalse(papProtocol.verifyPassword());
     }
 
     @Test
     public void testPasswordOtpPassword() {
         enableOTP();
-        request.setUserPassword("test123456");
         PAPProtocol papProtocol = new PAPProtocol(request, session);
         papProtocol.setOtpPasswordGetter(passwordFactory);
+
+        when(subjectCredentialManager.isValid(
+                any(CredentialInput.class))).thenAnswer(
+                i -> i.getArgument(0, CredentialInput.class).getChallengeResponse().equals("test"));
+
+        request.setUserPassword("test123456");
         assertTrue(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("123456");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("test");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
+
+        enableOtpWithoutPassword();
+        request.setUserPassword("test123456");
+        assertTrue(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("123456");
+        assertTrue(papProtocol.verifyPassword(PasswordData.create("test")));
+        request.setUserPassword("test");
+        assertFalse(papProtocol.verifyPassword(PasswordData.create("test")));
     }
 
     @Test
